--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ function myFunction() {
     </div>
 
 <div class="row">
-    <img src="IMAGES/Render superklem3.png" style="width: 100%;">
+    <img src="/IMAGES/Render superklem3.png" style="width: 100%;">
     <div class="centered"; style="font-size:65px;" >Ivan Garcia Juarez</div>
     <div class="centered1"; style="font-size:40px;" >Design & Engineering</div>
 </div>
